<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_configurar_cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.jrvivanco.mascotita.ConfigurarCuenta">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:paddingBottom="60dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_usuario"
            android:maxLines="1"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnGuardarCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnGuardarCuenta"
        android:layout_marginTop="70dp"/>

</LinearLayout>
