<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.jrvivanco.mascotita.ContactoActivity">

    <include
        android:id="@+id/toolbarSub"
        layout="@layout/toolbar_sup"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Información requerida"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="12dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:textColorHint="@color/colorAzul"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_Correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="12dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="@color/colorAzul"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_Comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="12dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_comentario"
            android:textColorHint="@color/colorAccent"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:lines="4"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_EnviarMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="Enviar Comentario"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

</LinearLayout>
